@@ -1,3 +1,8 @@
+2003-04-03  Ross Burton  <ross@burtonini.com>
+
+	* tests/glade-test.c (mkdirs): Reimplemented mkdirs(). Still
+	sucks, but at least works.
+
 2003-04-02  Ross Burton  <ross@burtonini.com>
 
 	* tests/glade-test.c (pop_and_rip): Whoops, I'd "fixed" the ObiWan
